--- a/css/login.css
+++ b/css/login.css
@@ -86,7 +86,7 @@ img {
   width: 40px;
   height: 40px;
   object-fit: cover;
-  border-radius: 50%;
+  /* border-radius: 50%; */
   position: relative;
 }
 
